# photo-selector

./: .gitignore  improvement_plan.md  requirement.md
app/: package-lock.json  package.json
app/scripts/: perf-guard.mjs
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  thumbnail.rs
