[package]
name = "cherrypic"
version = "2.0.0"
description = "Photo Shortlisting App"
authors = ["CherryPic"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
walkdir = "2"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread"] }
